// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SiteFaviconAdminPage /> renders correctly when a favicon is set 1`] = `
<ContainerConstructor
  anyTouched={false}
  array={
    Object {
      "insert": [MockFunction],
      "move": [MockFunction],
      "pop": [MockFunction],
      "push": [MockFunction],
      "remove": [MockFunction],
      "removeAll": [MockFunction],
      "shift": [MockFunction],
      "splice": [MockFunction],
      "swap": [MockFunction],
      "unshift": [MockFunction],
    }
  }
  asyncValidate={[MockFunction]}
  asyncValidating={false}
  autofill={[MockFunction]}
  blur={[MockFunction]}
  change={[MockFunction]}
  clearAsyncError={[MockFunction]}
  clearSubmit={[MockFunction]}
  componentRef={null}
  destroy={[MockFunction]}
  dirty={false}
  dispatch={[MockFunction]}
  error={null}
  form="formName"
  handleSubmit={[MockFunction]}
  initialValues={Object {}}
  initialize={[MockFunction]}
  initialized={true}
  invalid={false}
  pristine={true}
  reset={[MockFunction]}
  siteFavicon={
    Object {
      "id": "siteFaviconId",
      "media": Object {
        "id": "mediaId",
        "name": "Favicon",
        "url": "https://www.gettyimages.com/gi-resources/images/CreativeLandingPage/HP_Sept_24_2018/CR3_GettyImages-159018836.jpg",
      },
    }
  }
  submitFailed={false}
  submitSucceeded={false}
  submitting={false}
  touch={[MockFunction]}
  untouch={[MockFunction]}
  valid={true}
  warning={null}
/>
`;

exports[`<SiteFaviconAdminPage /> renders correctly without a favicon set 1`] = `
<ContainerConstructor
  anyTouched={false}
  array={
    Object {
      "insert": [MockFunction],
      "move": [MockFunction],
      "pop": [MockFunction],
      "push": [MockFunction],
      "remove": [MockFunction],
      "removeAll": [MockFunction],
      "shift": [MockFunction],
      "splice": [MockFunction],
      "swap": [MockFunction],
      "unshift": [MockFunction],
    }
  }
  asyncValidate={[MockFunction]}
  asyncValidating={false}
  autofill={[MockFunction]}
  blur={[MockFunction]}
  change={[MockFunction]}
  clearAsyncError={[MockFunction]}
  clearSubmit={[MockFunction]}
  componentRef={null}
  destroy={[MockFunction]}
  dirty={false}
  dispatch={[MockFunction]}
  error={null}
  form="formName"
  handleSubmit={[MockFunction]}
  initialValues={Object {}}
  initialize={[MockFunction]}
  initialized={true}
  invalid={false}
  pristine={true}
  reset={[MockFunction]}
  siteFavicon={
    Object {
      "id": "siteFaviconId",
      "media": null,
    }
  }
  submitFailed={false}
  submitSucceeded={false}
  submitting={false}
  touch={[MockFunction]}
  untouch={[MockFunction]}
  valid={true}
  warning={null}
/>
`;
